security/internal_external-tls_mtls_confluent-rbac/ingress-service-hostbased.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-with-tls-reencryption
  namespace: confluent
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
spec:
  tls:
    - hosts:
      - mds.mtls.aksdomain.xyz
      - controlcenter.mtls.aksdomain.xyz
      - ksqldb.mtls.aksdomain.xyz
      - connect.mtls.aksdomain.xyz
      # This assumes tls-secret exists and the SSL
      # certificate contains a CN for aksdomain.xyz
      secretName: tls-nginx-cert
  rules:
    - host: mds.mtls.aksdomain.xyz
      http:
        paths:
          - backend:
              serviceName: mds-bootstrap
              servicePort: 8090
    - host: controlcenter.mtls.aksdomain.xyz
      http:
        paths:
          - backend:
              serviceName: controlcenter-0-internal
              servicePort: 9021
    - host: ksqldb.mtls.aksdomain.xyz
      http:
        paths:
          - backend:
              serviceName: ksqldb-bootstrap
              servicePort: 8088
    - host: connect.mtls.aksdomain.xyz
      http:
        paths:
          - backend:
              serviceName: connect-bootstrap
              servicePort: 8083
